CSS Updates to prevent reports overlapping.

--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -23,6 +23,7 @@
 }
 .line-chart {
     min-height:500px;
+    max-height:1000px;
 }
 
 @media screen and (max-width:767px) {
